1.0.5 /2013-01-05/:
    * Changed ProGuard config to preserve all annotated fields.
    * Numerous ImageFetcher improvements.
    * AsyncTask, L fixes.

1.0 /2012-12-31/:
    * Oh yeah! (:

0.9.7 /2012-12-28/:
    * InjectView, InjectFragment, InjectBundleExtra annotations arguments changed.
    * EntityManager & JSONSerializer lost factory methods.
    * FragmentActivity, TabbedFragmentActivity: methods changed to accept Fragments instead of fragment ids.
    * Injection improvements & misc.

0.9.6 /2012-12-26/:
    * ImageAttacher => ImageFetcher & related helpers changes.

0.9.5 /2012-12-25/:
    * 'modern-sherlock' & 'modern-native' modules got merged into 'fragments' module & also received pure
      'android-support-v4.jar' base classes.
      To migrate, change imports for Activities & Fragments. New package name suffixes: 'sherlock' = ActionBarSherlock,
      'stock' = Android 3.0+ native implementation, 'support' = Android Support Package.
      Also notice the 'sherlock-support-v4-stub.jar_' file in the libs folder.
    * RESTClient lost proxy support but now provides access to underlying HTTPWorkers for fine-tuning.
    * RESTClient now supports setting a AuthScope for HTTP Basic Authentication.
    * Fixed RESTClient not requesting GZIP when using HttpURLConnectionWorker.
    * Reworked ImageAttacher. BitmapCache will now use LruCache if available.
    * Removed 'legacy' module & Loader subclasses.
    * DroidParts now doesn't use any xml resources. Which means it can be used as pure .jars placed in the libs folder.

0.9.3 /2012-12-16/:
    * Mavenized. Thanks to @emartynov.
    * RESTClient tweaks & fixes.

0.9.2 /2012-12-02/:
    * Fixes.

0.9.1 /2012-11-25/:
    * Minor yet neat changes.

0.9.0 /2012-11-19/:
    * DB: fixed '_id' suffix erroneously appended to autogenerated non-pk column names. 

0.8.9 /2012-11-09/:
    * We have cookies too: cookie cache for RESTClient.
    * Injector cleanup.

0.8.8 /2012-10-27/: